frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend # Sets service name
  labels:
    app: frontend #Labels and Selectors
spec:
  type: ClusterIP #Sets service type
  ports:
    - port: 8000 #Sets port to run the frontend application
  selector:
    app: frontend
