frontend/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
spec:
  ingress:
    - ports:
        - port: 80
          protocol: TCP
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
